add unit some tests

--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
   },
   "homepage": "https://github.com/EmanHerawy/yc-smart-contract#readme",
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
     "@openzeppelin/contracts": "^2.5.0"
+  },
+  "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.4"
   }
 }
