--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@openzeppelin/contracts": "^2.5.0"
   },
   "devDependencies": {
-    "@openzeppelin/test-helpers": "^0.5.4"
+    "@openzeppelin/test-helpers": "^0.5.4",
+    "@truffle/hdwallet-provider": "^1.0.32"
   }
 }
